--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
   <main>
     <section id="about" class="card fade-in">
       <h2>About Me</h2>
-      <p>Did schooling from St. Ursula School, diploma from Yashwantrao Bhonsale Polytechnic, and now pursuing a degree from MIT ADT. Currently learning Advanced Machine Learning & Cybersecurity Threat Analysis.</p>
+      <p>
+Hi, I'm Kunal Masurkar, a passionate Computer Science undergraduate specializing in Cybersecurity and Forensics at MIT ADT University. With a strong foundation in programming, machine learning, and ethical hacking, I enjoy building secure systems that solve real-world problems.
+
+I’ve completed multiple certifications from IBM, Cisco, Meta, and IIT Bombay, and have interned at IIT Bombay to gain hands-on experience in applied research and software development. My projects range from Heart Disease Prediction and Fake Hotel Review Detection to advanced biometric security systems like BioCipher and self-healing cybersecurity frameworks.
+
+Beyond tech, I’m a creative mind with a passion for photography, cinematography, content creation, and adventure trekking. I believe in collaborative leadership, lifelong learning, and using technology for good.
+      </p>
       <ul class="about-list">
         <li>Hobbies: Traveling, adventure trekking, movies, music, researching AI & cybersecurity trends.</li>
       </ul>
