--- a/index.html
+++ b/index.html
@@ -59,17 +59,21 @@ Beyond tech, I’m a creative mind with a passion for photography, cinematograph
     <section id="projects" class="card fade-in">
       <h2>Projects</h2>
       <ul class="projects-list">
-        <li><b>Online Payment Fraud Detection:</b> ML-based system to enhance online payment security and fraud prevention.</li>
-        <li><b>Fake Hotel Review Project:</b> ML model to identify and filter fraudulent hotel reviews.</li>
-        <li><b>Heart Disease Prediction:</b> ML model to predict heart disease risk based on patient data.</li>
-        <li>See more on <a href="https://github.com/kunal-masurkar" target="_blank">GitHub</a>.</li>
+  <li><b>Self-Healing Cybersecurity System:</b> AI-driven system that detects cyberattacks and automatically applies countermeasures.</li>
+  <li><b>BioCipher:</b> Biometric-secured file manager with role-based access and Fernet encryption for sensitive data protection.</li>
+  <li><b>Brute Force Attack Simulator:</b> Web-based tool that simulates brute force attacks and defenses using Firebase and reCAPTCHA.</li>
+  <li><b>Phishing URL Detector:</b> ML-powered system that classifies URLs as malicious or safe to prevent phishing attacks.</li>
+  <li><b>Online Payment Fraud Detection:</b> ML-based system to enhance online payment security and fraud prevention.</li>
+  <li><b>Fake Hotel Review Project:</b> ML model to identify and filter fraudulent hotel reviews.</li>
+  <li><b>Heart Disease Prediction:</b> ML model to predict heart disease risk based on patient data.</li>
+  <li>See more on <a href="https://github.com/kunal-masurkar" target="_blank">GitHub</a>.</li>
       </ul>
     </section>
     <section id="contact" class="card fade-in">
       <h2>Contact & Socials</h2>
       <ul class="contact-list">
         <li>Email: <a href="mailto:kunalmasurkar26@gmail.com">kunalmasurkar26@gmail.com</a></li>
-        <li>LinkedIn: <a href="https://linkedin.com/in/kunal-masurkar-8494a123a" target="_blank">linkedin.com/in/kunal-masurkar-8494a123a</a></li>
+        <li>LinkedIn: <a href="https://linkedin.com/in/kunal-masurkar-link" target="_blank">linkedin.com/in/kunal-masurkar-8494a123a</a></li>
         <li>GitHub: <a href="https://github.com/kunal-masurkar" target="_blank">github.com/kunal-masurkar</a></li>
         <li>Twitter/X: <a href="https://x.com/KunalMasurkar2" target="_blank">@KunalMasurkar2</a></li>
         <li>Linktree: <a href="https://linktr.ee/kunalmasurkar" target="_blank">linktr.ee/kunalmasurkar</a></li>
